--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,13 @@ android {
 
 dependencies {
 
+    // server(Sprig & Django)
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation group: "com.squareup.okhttp3", name: 'logging-interceptor', version: '4.10.0'
+
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
