--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ android {
 
 dependencies {
 
+    //스플래시 API
+    implementation 'androidx.core:core-splashscreen:1.0.0-alpha01'
+
     implementation "com.kakao.sdk:v2-all:2.15.0" // 전체 모듈 설치, 2.11.0 버전부터 지원
     implementation "com.kakao.sdk:v2-user:2.15.0" // 카카오 로그인
     implementation "com.kakao.sdk:v2-talk:2.15.0" // 친구, 메시지(카카오톡)
