--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,10 @@ android {
 
 dependencies {
 
+    //리사이클러뷰
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+
+
     //Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0' //Circle ImageView
 
