--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ android {
 
 dependencies {
 
+    //뷰 페이저
+    implementation 'com.google.android.material:material:1.9.0'
+
     //리사이클러뷰
     implementation 'androidx.recyclerview:recyclerview:1.3.1'
 
