--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,9 @@
             <!-- Splash Screen Configuration -->
             <meta-data
                 android:name="android.splash_screen_drawable"
-                android:resource="@drawable/img_splash_screen" />
+                android:resource="@layout/activity_splash_screen"/>
+<!--                android:resource="@drawable/img_splash_screen" />-->
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
