✨ Quiz CreatedAt 적용
1. Quiz CreatedAt 적용

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ android {
             useSupportLibrary true
         }
 
-        buildConfigField "String", "KAKAO_NATIVE_APP_KEY", properties['kakao_native_app_key']
-        resValue "string", "kakao_oauth_host", properties['kakao_oauth_host']
+        buildConfigField "String", "KAKAO_NATIVE_APP_KEY", properties["KAKAO_NATIVE_APP_KEY"]
+        resValue "string", "kakao_oauth_host", properties["kakao_oauth_host"]
     }
 
     buildTypes {
@@ -50,6 +50,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
 }
 
